// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyTheme renders correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; box-shadow: 0px 1px 4px rgba(0,0,0,0.15); flex-direction: row; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; color: rgb(87, 79, 235); flex-direction: row;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      hello world
    </div>
  </div>
</div>
`;

exports[`modes renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(238, 237, 253); flex-direction: row; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`modes renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; box-shadow: 0px 1px 4px rgba(0,0,0,0.15); flex-direction: row; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`modes should render correctly when colorMode is set globally 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; color: rgb(238, 237, 253); flex-direction: row;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`modes should render correctly when colorMode set as prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; color: rgb(238, 237, 253); flex-direction: row;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`overrides should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; box-shadow: 0px 1px 4px rgba(0,0,0,0.15); flex-direction: row; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; flex-direction: row;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; color: rgb(87, 79, 235); flex-direction: row;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`theming Group.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; flex-direction: row;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      hello world
    </div>
  </div>
</div>
`;

exports[`theming Group.styles.base should render correctly 2`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; flex-direction: row;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`variants renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(255, 0, 0); flex-direction: row; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`variants renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; box-shadow: 0px 1px 4px rgba(0,0,0,0.15); flex-direction: row; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px; flex-direction: row;"
>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 6px; border-bottom-right-radius: 0px; border-top-left-radius: 6px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="border-bottom-left-radius: 0px; border-bottom-right-radius: 6px; border-left-width: 0px; border-top-left-radius: 0px; border-top-right-radius: 6px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      Hello world
    </div>
  </div>
</div>
`;
